<resources>
    <string name="appName">Notes</string>
    <string name="appVersion">App version is %s</string>
    <string name="appDeveloper">App developed by Carlos Sancho Ramírez</string>

    <string name="optionNew">New</string>
    <string name="optionSave">Save</string>
    <string name="optionDelete">Delete</string>
    <string name="optionAbout">About</string>

    <string name="createDialogTitle">New note title</string>
    <string name="unableToCreate">Unable to create</string>
    <string name="saveFeedback">Note saved</string>

    <string name="leaveConfirmationMessage">Note has not been saved. Are you sure that you want to leave and discard the changes?</string>

    <string name="deleteConfirmationMessage">Are you sure that you want to remove the selected notes?</string>
    <string name="deleteFeedback">Notes deleted</string>
</resources>
